<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grupo_op"
        android:checkableBehavior="single">

        <!--Inicio-->
        <item
            android:id="@+id/op_inicio_V"
            android:title="@string/op_inicio_V"
            android:icon="@drawable/ico_inicio"/>

        <!--Categorías-->
        <item
            android:id="@+id/op_categorias_v"
            android:title="@string/op_categorias_v"
            android:icon="@drawable/ico_categoria"/>

        <!--Mi tienda-->
        <item
            android:id="@+id/op_mi_tienda_V"
            android:title="@string/op_mi_tienda_V"
            android:icon="@drawable/ico_mi_tienda"/>

        <!--Reseñas-->
        <item
            android:id="@+id/op_resenia_V"
            android:title="@string/op_resenia_V"
            android:icon="@drawable/ico_resenias"/>

    </group>

    <item
        android:id="@+id/op_cerrar_sesion_V"
        android:title="@string/op_cerrar_sesion_V"
        android:icon="@drawable/ico_salir"/>



</menu>